@@ -1,3 +1,8 @@
+2012-12-19  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Return async modules to normal after
+	  twice the module interval has elapsed.
+
 2012-12-19  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Added new function to update 
